Copying Over code from old app

--- a/AvatarCatan2.2/app/src/main/AndroidManifest.xml
+++ b/AvatarCatan2.2/app/src/main/AndroidManifest.xml
@@ -15,6 +15,51 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RulesActivity"
+            android:label="@string/title_activity_rules"
+            android:parentActivityName=".MainMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+        </activity>
+        <activity
+            android:name=".UnitsActivity"
+            android:label="@string/title_activity_units"
+            android:parentActivityName=".MainMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+        </activity>
+        <activity
+            android:name=".OffensiveTeamChoiceActivity"
+            android:label="@string/title_activity_offensive_team_choice"
+            android:parentActivityName=".MainMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+        </activity>
+        <activity
+            android:name=".LoadBattleActivity"
+            android:label="@string/title_activity_load_battle"
+            android:parentActivityName=".MainMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+        </activity>
+        <activity
+            android:name=".TimerActivity"
+            android:label="@string/title_activity_timer"
+            android:parentActivityName=".MainMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+        </activity>
     </application>
 
 </manifest>
