--- a/AvatarCatan2.2/app/src/main/AndroidManifest.xml
+++ b/AvatarCatan2.2/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainMenuActivity">
+        <activity android:name=".ActivityMainMenu">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,76 +16,76 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".RulesActivity"
+            android:name=".ActivityRules"
             android:label="@string/title_activity_rules"
-            android:parentActivityName=".MainMenuActivity"
+            android:parentActivityName=".ActivityMainMenu"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+                android:value=".ActivityMainMenu" />
         </activity>
         <activity
-            android:name=".UnitsActivity"
+            android:name=".ActivityUnits"
             android:label="@string/title_activity_units"
-            android:parentActivityName=".MainMenuActivity"
+            android:parentActivityName=".ActivityMainMenu"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+                android:value=".ActivityMainMenu" />
         </activity>
         <activity
-            android:name=".OffensiveTeamChoiceActivity"
+            android:name=".ActivityOffensiveTeamChoice"
             android:label="@string/title_activity_offensive_team_choice"
-            android:parentActivityName=".MainMenuActivity"
+            android:parentActivityName=".ActivityMainMenu"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+                android:value=".ActivityMainMenu" />
         </activity>
         <activity
-            android:name=".LoadBattleActivity"
+            android:name=".ActivityLoadBattle"
             android:label="@string/title_activity_load_battle"
-            android:parentActivityName=".MainMenuActivity"
+            android:parentActivityName=".ActivityMainMenu"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+                android:value=".ActivityMainMenu" />
         </activity>
         <activity
-            android:name=".TimerActivity"
+            android:name=".ActivityTimer"
             android:label="@string/title_activity_timer"
-            android:parentActivityName=".MainMenuActivity"
+            android:parentActivityName=".ActivityMainMenu"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="catan.avatar.matt.avatarcatan22.MainMenuActivity" />
+                android:value=".ActivityMainMenu" />
         </activity>
         <activity
-            android:name=".DefensiveTeamChoiceActivity"
+            android:name=".ActivityDefensiveTeamChoice"
             android:label="@string/title_activity_defensive_team_choice"
-            android:parentActivityName=".OffensiveTeamChoiceActivity"
+            android:parentActivityName=".ActivityOffensiveTeamChoice"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="catan.avatar.matt.avatarcatan22.OffensiveTeamChoiceActivity" />
+                android:value=".ActivityOffensiveTeamChoice" />
         </activity>
         <activity
-            android:name=".SettlementChoiceActivity"
+            android:name=".ActivitySettlementChoice"
             android:label="@string/title_activity_settlement_choice"
-            android:parentActivityName=".DefensiveTeamChoiceActivity"
+            android:parentActivityName=".ActivityDefensiveTeamChoice"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="catan.avatar.matt.avatarcatan22.DefensiveTeamChoiceActivity" />
+                android:value=".ActivityDefensiveTeamChoice" />
         </activity>
         <activity
-            android:name=".BattleGroundActivity"
+            android:name=".ActivityBattleGround"
             android:label="@string/title_activity_battle_ground"
-            android:parentActivityName=".MainMenuActivity"
+            android:parentActivityName=".ActivityMainMenu"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="catan.avatar.matt.avatarcatan22.SettlementChoiceActivity" />
+                android:value=".ActivitySettlementChoice" />
         </activity>
     </application>
 
